<resources>
    <string name="app_name">XkcdViewer</string>
    <string name="action_settings">Settings</string>
    <string name="comic_loading_failed">Error while loading comic</string>
    <string name="comic_sharing_failed">Error while sharing comic</string>
    <string name="mainmenu_about">About</string>
    <string name="mainmenu_share">Share...</string>
    <string name="mainmenu_share_link">Link...</string>
    <string name="mainmenu_share_image">Image...</string>
    <string name="mainmenu_bookmarks">Favorites</string>
    <string name="mainmenu_search_title">Search by Title...</string>
    <string name="image_view_description">Image view</string>
    <string name="server_error">Error while fetching comics from server</string>
    <string name="title_activity_bookmark">BookmarkActivity</string>

</resources>
